--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/startup.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Startup Academy - Accélérateur de startups au Cameroun. Formation, mentorat et accompagnement pour entrepreneurs." />
+    <title>Startup Academy - Accélérateur de Startups au Cameroun</title>
   </head>
   <body>
     <div id="root"></div>
